--- a/README.textile
+++ b/README.textile
@@ -36,4 +36,6 @@ It'll tell you what it is doing while it is running. It'll cache the listening d
 
 Note: Tested with ruby 2.4.2 and updated Last.fm API on OSX 10.12.6
 
+Note: Make sure to delete the cache files (*.rbmarshal) when you want to update with fresh data.
+
 As always, if you find any bugs: fork, fix and send a pull request.
